--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: "Mon blog"
 description: "Explorations croisées entre la chimie, la data science"
 author: "Ton Nom"
 theme: minima
+style: "/assets/css/style.css"
 
 # Navigation (menu en haut)
 minima:
